etckeeper (1.18.2-1) unstable; urgency=medium

  * Prepare upload to Debian unstable
  * Fix Makefile version patterns to ignore non-native version number

 -- Antoine Beaupré <anarcat@debian.org>  Thu, 14 Jan 2016 14:39:31 -0500

etckeeper (1.18.2) unstable; urgency=medium

  * Use getent utility instead of perl. (Elan Ruusamäe)
  * Initial FreeBSD support with pkgng plugin. (William Johansson)
  * Fix README.md symlink in package (Sebastian Schmidt, Antoine Beaupré,
    closes: #791566)
  * Fix typo of GIT_COMMITTER_EMAIL.

 -- Joey Hess <id@joeyh.name>  Tue, 04 Aug 2015 10:13:08 -0400

etckeeper (1.18.1) unstable; urgency=medium

  * Add myself as maintainer (Closes: #768516)
  * Keeping the package native as I do not intend to diverge from
    upstream.
  * Update git URL in control file.

 -- Antoine Beaupré <anarcat@debian.org>  Sat, 21 Mar 2015 18:30:07 -0400

etckeeper (1.18) unstable; urgency=medium

  * Send yum pre-commit output to /dev/null
    Thanks, Andrew Colin Kissa
  * Set LANG=C internally when doing some operations that have
    been reported to fail in other locales.

 -- Joey Hess <id@joeyh.name>  Sat, 14 Mar 2015 13:24:07 -0400

etckeeper (1.17) unstable; urgency=medium

  * Fix name of DNF plugin.
  * Add --version
    Thanks Andreas Wansner.
  * New website, http://etckeeper.branchable.com/
  * Add build-depends on dh-python.

 -- Joey Hess <id@joeyh.name>  Mon, 22 Dec 2014 16:42:26 -0400

etckeeper (1.16) unstable; urgency=medium

  * Added support for Fedora's DNF highlevel package manager.
    Thanks, Peter Listiak and Petr Spacek.
  * Add architecture info to dpkg list-installed. Closes: #768145
  * Orphaned the Debian package.

 -- Joey Hess <joeyh@debian.org>  Fri, 07 Nov 2014 21:30:50 -0400

etckeeper (1.15) unstable; urgency=medium

  * Recommend cron-daemon, rather than cron, as etckeeper only needs
    cron.daily functionality. Closes: #762721

 -- Joey Hess <joeyh@debian.org>  Thu, 16 Oct 2014 12:21:48 -0400
